crates/solidity/testing/snapshots/bindings_output/built_ins/shadowing/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
    ╭─[input.sol:14:1]
    │
 14 │ function sha256() {}
    │ ──────────┬──────────  
    │           ╰──────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     int tx;
    │         ─┬  
    │          ╰── def: 2
    │ 
  4 │     function test() public {
    │              ──┬─  
    │                ╰─── def: 3
  5 │         int block;
    │             ──┬──  
    │               ╰──── def: 4
  6 │         block;
    │         ──┬──  
    │           ╰──── ref: 4
  7 │         tx;
    │         ─┬  
    │          ╰── ref: 2
  8 │         sha256();
    │         ───┬──  
    │            ╰──── ref: 5
    │ 
 11 │     function sha256() public {}
    │              ───┬──  
    │                 ╰──── def: 5
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
  2 │ │ │         int tx;
    │ │ │     ──────┬─────  
    │ │ │           ╰─────── definiens: 2
  3 │ │ ╭───▶ 
    ┆ ┆ ┆     
  5 │ │ │             int block;
    │ │ │     ─────────┬─────────  
    │ │ │              ╰─────────── definiens: 4
    ┆ ┆ ┆     
  9 │ │ ├─│ ▶     }
    │ │ │ │           
    │ │ ╰───────────── definiens: 3
 10 │ │   ╭─▶ 
 11 │ │   ├─▶     function sha256() public {}
    │ │   │                                     
    │ │   ╰───────────────────────────────────── definiens: 5
 12 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
